libsql-server/sqld/src/http/snapshots/sqld__http__types__test__parse_http_query.snap
---
source: sqld/src/http/types.rs
expression: found
---
{
  "statements": [
    {
      "q": "select * from test",
      "params": {
        "Positional": []
      }
    },
    {
      "q": "select ?",
      "params": {
        "Positional": [
          {
            "Integer": 12
          }
        ]
      }
    },
    {
      "q": "select ?",
      "params": {
        "Named": {
          ":foo": {
            "Text": "bar"
          }
        }
      }
    }
  ]
}
