libsql-server/sqld/src/http/snapshots/sqld__http__types__test__parse_named_params.snap
---
source: sqld/src/http/types.rs
expression: found
---
{
  "Named": {
    "$real": {
      "Real": 1.23
    },
    ":blob": {
      "Blob": [
        104,
        101,
        108,
        108,
        111,
        10
      ]
    },
    ":int": {
      "Integer": 1
    },
    ":null": "Null",
    ":str": {
      "Text": "hello"
    }
  }
}
