libsql-server/sqld/src/http/snapshots/sqld__http__types__test__parse_positional_params.snap
---
source: sqld/src/http/types.rs
expression: found
---
{
  "Positional": [
    {
      "Integer": 1
    },
    {
      "Text": "hello"
    },
    {
      "Real": 12.1
    },
    {
      "Blob": [
        104,
        101,
        108,
        108,
        111,
        10
      ]
    },
    "Null"
  ]
}
